[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/SpaceShipController.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Spaceship.png" type="Texture" id=2]
[ext_resource path="res://Sprites/RedFirepng.png" type="Texture" id=3]
[ext_resource path="res://Sprites/PurpleFirepng.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 20.2514

[node name="SpaceShip" type="Node2D"]
__meta__ = {
"_edit_group_": true
}

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
scale = Vector2( 3, 3 )
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
visible = false
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="KinematicBody2D"]
texture = ExtResource( 2 )

[node name="FireExaustion" type="Node2D" parent="KinematicBody2D"]

[node name="MainPurple" type="Sprite" parent="KinematicBody2D/FireExaustion"]
visible = false
texture = ExtResource( 4 )

[node name="LeftOrange" type="Sprite" parent="KinematicBody2D/FireExaustion"]
visible = false
texture = ExtResource( 3 )

[node name="RightOrange" type="Sprite" parent="KinematicBody2D/FireExaustion"]
visible = false
texture = ExtResource( 3 )
flip_h = true
